--- a/post-producer/package.json
+++ b/post-producer/package.json
@@ -4,9 +4,11 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "hono": "^4.6.3",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/kafkajs": "^1.8.2"
   }
 }
