--- a/post-producer/package.json
+++ b/post-producer/package.json
@@ -4,8 +4,10 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.1",
     "hono": "^4.6.3",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
