update compose file to spin up zookeeper image

--- a/post-producer/docker-compose.yml
+++ b/post-producer/docker-compose.yml
@@ -1,11 +1,17 @@
-version: '3'
-
 services:
+
+  zookeeper:
+    image: zookeeper:latest
+    ports:
+      - "2181:2181"
+
   kafka:
     image: confluentinc/cp-kafka
     ports:
       - "9092:9092"
+    expose:
+      - "9093"
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: "192.168.0.103:2182"
+      KAFKA_ZOOKEEPER_CONNECT: "192.168.0.103:2181"
       KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://192.168.0.103:9092"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
