--- a/post-consumer/package.json
+++ b/post-consumer/package.json
@@ -4,7 +4,9 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "hono": "^4.6.3",
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
